# md-editor

./: .gitignore  ARCHITECTURE.md  demo-showcase.md  demo.md  index.html  package-lock.json  package.json
.demo_versions/: demo_2026-07-04_02-34-18.md  demo_2026-07-15_06-53-35.md  demo_2026-07-15_08-21-03.md
.github/workflows/: release.yml
docs/: close-logic.md
src-tauri/: Cargo.toml  build.rs  md-editor.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/pdf/: macos.rs  mod.rs  windows.rs
src/app/: App.tsx
src/app/styles/: global.css
src/features/export/: exportHtml.ts
src/features/file/: useAutoDraft.ts  useCloseHandler.ts  useFile.ts
src/features/menu/: useMenu.ts
src/shared/lib/: fonts.ts
src/shared/store/: appStore.ts
src/shared/ui/: Toast.css  Toast.tsx
src/shared/utils/: timeUtil.ts
src/widgets/close-dialog/: CloseDialog.css  CloseDialog.tsx
src/widgets/editor/: Editor.css  Editor.tsx  TableContextMenu.css  TableContextMenu.tsx  block-drag-model.ts  block-drag.ts  block-list-handle.ts  block-selection-plugin.ts  highlight-plugin.ts  image-uploader.ts  list-indent-plugin.ts  paste-normalize.ts  table-focus-plugin.ts  url-drop-plugin.ts
src/widgets/editor/image-tools/: ImageOverlay.tsx  (+4 more)
src/widgets/settings/: Settings.css  Settings.tsx
src/widgets/sidebar/: Sidebar.css  Sidebar.tsx  SidebarTree.tsx
src/widgets/status-bar/: StatusBar.css  StatusBar.tsx
src/widgets/tab-bar/: TabBar.css  TabBar.tsx
src/widgets/toolbar/: Toolbar.css  Toolbar.tsx
